projet_gl/src/test/deca/context/invalid/3_71/3_71_1_Method_call.deca
// Description:
//    Problème de l'appel de methode d'un identificateur non-classe
//
// Resultats:
//    Ligne 13: Type error: should be a class type
//
// Historique:
//    cree le 19/01/2024

{
    int a;
    a.method;    
}